--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -13,5 +13,8 @@
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "hardhat": "^3.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0"
+  }
 }
