--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "apollo-server": "^3.13.0",
-    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "graphql": "^16.11.0"
@@ -21,8 +20,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "cors": "^2.8.5",
     "nodemon": "^3.1.10",
+    "pg": "^8.16.3",
     "prisma": "^6.14.0",
+    "sequelize": "^6.37.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
