--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -24,6 +24,7 @@
     "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.12.1",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.85.5",
     "autoprefixer": "^10.4.21",
