--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "ethers": "^6.8.0",
     "lucide-react": "^0.263.1",
     "next": "15.0.3",
@@ -20,6 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.8.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
   },
@@ -27,9 +32,13 @@
     "@netlify/plugin-nextjs": "^5.12.1",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.85.5",
+    "@web3modal/react": "^2.7.1",
+    "@web3modal/wagmi": "^5.1.11",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "15.0.3",
+    "geist": "^1.4.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "viem": "^2.34.0",
