--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "cors": "^2.8.5",
+    "ethers": "^6.15.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
