--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@netlify/plugin-nextjs": "^5.12.1",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.85.5",
+    "@wagmi/connectors": "^5.9.9",
     "@web3modal/react": "^2.7.1",
     "@web3modal/wagmi": "^5.1.11",
     "autoprefixer": "^10.4.21",
