--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -29,7 +30,9 @@
     "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@netlify/plugin-nextjs": "^5.12.1",
+    "@next/eslint-plugin-next": "^15.5.2",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.85.5",
     "@wagmi/connectors": "^5.9.9",
@@ -37,11 +40,14 @@
     "@web3modal/wagmi": "^5.1.11",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
-    "eslint": "^8.0.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3",
+    "eslint-plugin-react": "^7.37.5",
     "geist": "^1.4.2",
+    "pino-pretty": "^13.1.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "typescript-eslint": "^8.43.0",
     "viem": "^2.34.0",
     "wagmi": "^2.16.4"
   }
